// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ModalFooter with Button 1`] = `
.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row-reverse;
  -ms-flex-direction: row-reverse;
  flex-direction: row-reverse;
  padding: 1.25rem 2rem;
}

.c1 {
  display: grid;
  grid-gap: 1rem;
  grid-auto-flow: column;
  direction: rtl;
}

.c1 * {
  direction: ltr;
}

<footer
  className="c0"
>
  <div
    className="c1"
  >
    <button>
      Cancel
    </button>
  </div>
</footer>
`;

exports[`ModalFooter with InterstitialContext 1`] = `
.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row-reverse;
  -ms-flex-direction: row-reverse;
  flex-direction: row-reverse;
  padding: 1.25rem 2rem;
}

.c1 {
  display: grid;
  grid-gap: 1rem;
  grid-auto-flow: column;
  direction: rtl;
}

.c1 * {
  direction: ltr;
}

<footer
  className="c0"
>
  <div
    className="c1"
  >
    <button>
      Cancel
    </button>
    <button
      onClick={[Function]}
    >
      Yes, Delete "Stuff"
    </button>
  </div>
</footer>
`;
